testsuite/tests/v1/patterns/node_kind/unknown_node_kind/test.out
Error: Unknown node type
   ╭─[ <working-dir>/script.lkql:1:13 ]
   │
 1 │ print(42 is NotANode)
   │             ────┬───  
   │                 ╰───── Cannot find the "NotANode" node type
───╯
